# Cruft-Crawler-Offline-AI-Driven-Background-Disk-Cleanup

./: .gitignore  Cargo.toml  README.md  config.toml  cruftcrawler.html  git-log.txt  scan_path.txt  tauri.conf.json  testPR.txt
.github/workflows/: release.yml
capabilities/: default.json
data/: demo_metadata_clean.jsonl  llm_report.tsv
frontend/: index.html
src/: args.rs  file_decision.rs  llm_engine.rs  main.rs  prompt.txt  report.rs  ui.rs
src/actor/: ai_model.rs  crawler.rs  db_manager.rs  file_handler.rs  user_interface.rs  web_ui.rs
src/actor/data/test/: db
src/actors/: file_crawler_2.rs  metadata.rs
src/data/test/: db  snap.00000000000A71EC  snap.00000000000BAAD8
src/db/: db  snap.000000000000012B  snap.000000000005E840  snap.0000000000495326  snap.0000000000CB8AAD  snap.0000000000CBEADB
test_files/: duplicate_01_copy3.txt  duplicate_03_copy4.txt  duplicate_05_copy2.txt  duplicate_06_copy3.txt  duplicate_09_copy4.txt  duplicate_10_copy3.txt  original_02.txt  original_04.txt  original_07.txt  original_08.txt
ui/: main.slint
