[package]
name = "actor_with_llm_prototype"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
cargo-steady-state = "0.2.5"
encoding_rs = "0.8.35"
llama-cpp-2 = "0.1.124"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Windows-only deps (your CPU pinning code)
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Threading"] }

# UI (Slint)
slint = "1.5"
chrono = "0.4"

[build-dependencies]
slint-build = "1.5"
